bug fix on mobile view

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             <p>Current Score: <span id="currentScore"></span></p>
             <p id="question">question</p>
             <ol id="all-answer">
-                <li class="answer" data-ans=0>ans A</li>
-                <li class="answer" data-ans=1>ans B</li>
-                <li class="answer" data-ans=2>ans C</li>
-                <li class="answer" data-ans=3>ans D</li>
+                <li>A.<span class="answer" data-ans=0>ans A</span></li>
+                <li>B.<span class="answer" data-ans=1>ans B</span></li>
+                <li>C.<span class="answer" data-ans=2>ans C</span></li>
+                <li>D.<span class="answer" data-ans=3>ans D</span></li>
             </ol>
         </div>
 
